# telegramka-rs

./: .env  .gitignore  API.md  Cargo.toml  README.md
api/: Cargo.toml
api/src/: config.rs  dtos.rs  error.rs  handlers.rs  lib.rs  services.rs  utils.rs  ws.rs
api/src/dtos/: auth.rs  chats.rs  files.rs  messages.rs  push.rs  smtp.rs  users.rs
api/src/handlers/: auth.rs  chats.rs  files.rs  profile.rs  push.rs  users.rs
api/src/services/: auth.rs  chats.rs  files.rs  messages.rs  profile.rs  push.rs  users.rs
api/src/utils/: security.rs  smtp.rs  startup.rs
api/templates/: verification_code.html
entity/: Cargo.toml
entity/src/: chat_members.rs  chats.rs  lib.rs  messages.rs  prelude.rs  push_devices.rs  users.rs  verification_codes.rs
macros/: Cargo.toml
macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251202_065032_create_user_table.rs  m20260414_124744_init.rs  m20260519_000001_push_devices.rs
release/: 1.0.1.apk
src/: main.rs
