[package]
name = "telegramka-api"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
macros = { path = "../macros" }
axum = { version = "0.8.7", features = ["macros", "multipart", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.3"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.145"
anyhow = "1.0.75"
dotenvy = "0.15.7"
argon2 = "0.5.3"
time = "0.3.44"
lettre = { version = "0.11.19", features = ["tokio1-native-tls"] }
redis = { version = "1.0.0", features = ["tokio-native-tls-comp"] }
tera = "1.20.1"
thiserror = "2.0.17"
validator = { version = "0.20.0", features = ["derive"] }
tower-http = { version = "0.6.0", features = ["cors", "fs"] }
image = "0.25.1"
itertools = "0.14.0"
futures-util = "0.3.32"
uuid = { version = "1.13", features = ["v4", "fast-rng"] }
futures = "0.3.32"
google-fcm1 = "6"
yup-oauth2 = "11"
hyper-util = "0.1"
hyper-rustls = "0.27"
http-body-util = "0.1"


[dependencies.sea-orm]
version = "2.0.0-rc.37"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "debug-print",
    "macros",
    "with-chrono",
    "with-uuid"
]

[dev-dependencies]
http-body-util = "0.1.3"
serial_test = "3.2.0"
tower = { version = "0.5.2", features = ["util"] }
