[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.32"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
]
